v0.9.7
- The autoplay/demo actions that Mario does while waiting for you to press start have been disabled.
  This is to minimize any spoilers you get about the first level.
  If there is a demand for it, I can make this optional.
  Mario will jump once to let you know the game is in "demo mode".
- I've hopefully fixed despawning lifts in 1-2, but I'm not 100% sure.
- Excluded hidden coin block in 8-4 which is needed to complete the level normally.
- Removed option to randomize where "secondary hard mode" starts, because it was causing glitches / weirdness.

v0.9.6
- 1-2 and 4-2 can now be placed anywhere in the world layout!! (and warp zone randomization is aware of this!)
  - this is possible because I finally figured out a solution and wrote some custom code to make this work! (as in, custom NES/6502 code! yes, I'm proud :)
- Fixed looping castles
- Toad at the end of 8-4 is no longer randomized, thus ensuring you get the princess when you win
- The hidden coin blocks in 4-2 needed to access the warp zone are no longer randomized, thus ensuring you can always get to the warp zone
- Added two "80s/outrun/vaporwave" colorschemes
- Internal changes

v0.9.5
- Added two new modes for item block randomization
- Added option to randomize content of brick blocks in underground bonus areas
- Added options to:
  - Randomize Fire Bar spin speed
  - Shuffle Fire Bar spin directions
  - Exclude Fire Bars from enemy randomization
- Removed old enemy randomization algorithm
- Improvements to new enemy randomization algorithm
- Fixed Lakitu's coordinates so he doesn't spawn near the ground
- Other bug fixes
- Frontend improvements, including but not limited to:
  - If you input a seed number, the frontend will now store/remember it.
  - The button that links to the most recently created logfile now works every time!
    (Previously it only worked once, due to a bug.)

v0.9.4
- Improvements to new enemy randomization algorithm
- Improvements to background/scenery randomization