@@ -4,6 +4,8 @@ v0.9.7
   If there is a demand for it, I can make this optional.
   Mario will jump once to let you know the game is in "demo mode".
 - I've hopefully fixed despawning lifts in 1-2, but I'm not 100% sure.
+- Added option to shuffle the music (so that for example all castles may get underwater music and so on).
+  This option does not change anything else, and does not change flags/seedhash.
 - Excluded hidden coin block in 8-4 which is needed to complete the level normally.
 - Removed option to randomize where "secondary hard mode" starts, because it was causing glitches / weirdness.
 
